recursion.lessons.recursion.tree.Tree.scala.error
Tree:16: error: not found: value step
		current(step+1);
                        ^